# tinychat

./: .env.example  README.md  app.py  config.cfg  db.py  models.py  pyproject.toml  requirements.txt  vercel.json
routes/: index.py  sockets.py  views.py
src/: db.py  main.py  models.py
src/routes/: index.py  sockets.py
src/static/css/: controller.css  global.css  index.css  login.css
src/static/js/: chats.js  elements.js  firebase.js  messages.js  script.js  socketio.js
src/templates/: base.html  index.html  login.html
static/css/: controller.css  global.css  index.css  login.css  popup.css  sms-controll.css
static/js/: chats.js  converse.js  elements.js  firebase.js  message.js  messages.js  script.js  socketio.js  socketio_client.js
templates/: base.html  index.html  login.html
tinychat/: db.py  main.py  models.py
tinychat/routes/: index.py  sockets.py  views.py
tinychat/static/css/: controller.css  global.css  index.css  login.css
tinychat/static/js/: chats.js  elements.js  firebase.js  messages.js  script.js  socketio.js
tinychat/templates/: base.html  index.html  login.html
