[tool.poetry]
name = "open-chat"
version = "0.1.0"
description = "A simple chat application"
authors = ["Carlos Mateus"]
license = "MIT"
readme = "README.md"
packages = [{include = "open_chat"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
simple-websocket = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
