[tool.poetry]
name = "open-chat"
version = "0.1.0"
description = "A simple chat application"
authors = ["Carlos Mateus"]
license = "MIT"
readme = "README.md"
packages = [{include = "openchat"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
simple-websocket = "^0.10.1"
pymongo = "^4.4.0"
pydantic = {extras = ["email"], version = "^2.0"}
flask-pydantic = "^0.11.0"
flask-cors = "^4.0.0"
rich = "^13.4.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
