[tool.poetry]
name = "open-chat"
version = "0.1.0"
description = "A simple chat application"
authors = ["Carlos Mateus"]
license = "MIT"
readme = "README.md"
packages = [{include = "openchat"}]

[tool.poetry.dependencies]
python = "^3.12.3"
simple-websocket = "^0.10.1"
pymongo = "^4.4.0"
pydantic = { extras = ["email"], version = "^2.10.4" }
rich = "^13.4.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.34.0"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-socketio = "^5.5.1"
flask-pydantic = "^0.12.0"
eventlet = "^0.38.2"
gevent = "^24.11.1"

[tool.taskipy.tasks]
lint = "black tinychat/ && isort tinychat/"
run = "python tinychat/main.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
